--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+
 html {
-  background-color: #30D3BD;
+  background-color: #E8E88B;
 }
 p {
-  color: red;
+  color: black;
+  font-family: 'Architects Daughter', cursive;
 }
