--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 html {
   background-color: #E8E88B;
 }
-p, h1, ul {
+p, h1, li {
   color: black;
   font-family: 'Architects Daughter', cursive;
 }
