--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ html {
   background-color: #F2F495;
   font-family: 'Architects Daughter', cursive;
 }
-p, h1, h2, li {
+p {
   color: black;
-  
-}
+  }
